theme.css
/*

Principles:
1. Use the base colour to distinguish between different vaults.
2. Separate content (white/black background) from controls (accent colour background)
3. Use spacing for grouping rather than lines
4. Distinguish controls visually
5. Buttons are lighter, content containers darker

*/

/* @settings

name: Kakano
id: kakano-style
settings:
  -
    id: base
    title: Base color
    description: 'Base color, from which the Kakano theme will generate background gradients.'
    type: variable-color
    format: hsl-split
    default: '#007AFF'
  -
    id: setting-properties-position
    title: 'Properties position'
    description: 'Place properties before or after your main note content. Note that this only applies to Live Preview mode'
    type: class-select
    allowEmpty: false
    default: 'setting-properties-position-above'
    options:
      -
        label: 'Above main note content'
        value: 'setting-properties-position-above'
      -
        label: 'Below main note content'
        value: 'setting-properties-position-below'
*/

/********* Variables *********/

body {
  --background-input: var(--theme-color-baseVeryVeryTransparent);
  --slider-track-background: var(--theme-color-baseTransparent);
  --background-modifier-message: var(--theme-color-noticeBg);
  --background-secondary: transparent;
  --callout-padding: 0.75em 1.5em;
  --checkbox-border-color-hover: var(--interactive-accent-hover);
  --checkbox-border-color: var(--interactive-accent);
  --checkbox-color: var(--interactive-accent);
  --divider-width: 0;
  --file-line-width: 40rem;
  --file-margins: 0;
  --heading-spacing: 0.67em;
  --inline-title-size: var(--font-ui-medium);
  --inline-title-weight: bold;
  --input-border-width: 2px;
  --metadata-divider-width: 0;
  --metadata-gap: 0.5em;
  --metadata-property-background-hover: var(--nav-item-background-hover);
  --modal-border-color: black;
  --modal-border-width: 0;
  --nav-item-children-margin-left: 1em;
  --nav-item-children-padding-left: 0.5em;
  --nav-item-padding: 0.25em 0.5em 0.25em 0.5em;
  --nav-item-parent-padding: 0.25em 0 0.25em 0;
  --p-spacing: 0;
  --prompt-border-color: transparent;
  --prompt-border-width: 0;
  --ribbon-background-collapsed: transparent;
  --ribbon-background: transparent;
  --ribbon-width: 3em;
  --status-bar-text-color: var(--text-normal);
  --tab-container-background: transparent;
  --tab-curve: calc(var(--tab-radius) * 0.5);
  --tab-outline-width: 0;
  --tab-radius-active: 0.25em;
  --tab-radius: 0.25em;
  --titlebar-background-focused: transparent;
  --titlebar-background: transparent;

  /* Base all theme colours off these */
  /* The base HSL variables will be overridden by Style Settings if installed, otherwise they'll use the accent colour. */
  --base-h: var(--accent-h);
  --base-s: var(--accent-s);
  --base-l: var(--accent-l);

  /* The base color */
  --theme-color-base: hsl(var(--base-h), var(--base-s), var(--base-l));

  /*  Base colour variants */
  --theme-color-baseVeryVeryLightened: color-mix(in srgb, var(--theme-color-base), white calc(100% * 0.95));
  --theme-color-baseVeryLightened: color-mix(in srgb, var(--theme-color-base), white calc(100% * 0.80));
  --theme-color-baseLightened: color-mix(in srgb, var(--theme-color-base), white calc(100% * 0.70));
  --theme-color-baseSlightlyLightened: color-mix(in srgb, var(--theme-color-base), white calc(100% * 0.50));
  --theme-color-baseSlightlyDarkened: color-mix(in srgb, var(--theme-color-base), black calc(100% * 0.50));
  --theme-color-baseDarkened: color-mix(in srgb, var(--theme-color-base), black calc(100% * 0.70));
  --theme-color-baseVeryDarkened: color-mix(in srgb, var(--theme-color-base), black calc(100% * 0.80));
  --theme-color-baseVeryVeryDarkened: color-mix(in srgb, var(--theme-color-base), black calc(100% * 0.95));

  /* Base color with transparency */
  --theme-color-baseTransparent: hsla(var(--base-h), var(--base-s), var(--base-l), 0.5);
  --theme-color-baseSlightlyTransparent: hsla(var(--base-h), var(--base-s), var(--base-l), 0.75);
  --theme-color-baseVeryTransparent: hsla(var(--base-h), var(--base-s), var(--base-l), 0.25);
  --theme-color-baseVeryVeryTransparent: hsla(var(--base-h), var(--base-s), var(--base-l), 0.125);
  --theme-color-lightenTransparent: rgba(255,255,255, 0.5);
  --theme-color-darkenTransparent: rgba(255,255,255, 0.5);

  /* Hues */
    --color-red-rgb: 233, 49, 71;
    --color-red: #e93147;
    --color-orange-rgb: 236, 117, 0;
    --color-orange: #ec7500;
    --color-yellow-rgb: 224, 172, 0;
    --color-yellow: #e0ac00;
    --color-green-rgb: 8, 185, 78;
    --color-green: #08b94e;
    --color-cyan-rgb: 0, 191, 188;
    --color-cyan: #00bfbc;
    --color-blue-rgb: 8, 109, 221;
    --color-blue: #086ddd;
    --color-purple-rgb: 120, 82, 238;
    --color-purple: #7852ee;
    --color-pink-rgb: 213, 57, 132;
    --color-pink: #d53984;

}
body,
body .metadata-property:not([data-property-key="tags"]),
body .metadata-property[data-property-key="tags"] {
  --pill-padding-x: 1em;
  --pill-padding-y: 0.125em;
}
/* ... */

